--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "suggest.noselect": false,
   "coc.preferences.formatOnSaveFiletypes": [
+    "html",
     "css", 
     "javascript",
     "typescript",
