Add completion option for C and C++

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -31,5 +31,17 @@
     "ma": "addFile",
     "mA": "addDirectory"
   },
-  "prettier.requireConfig": true
+  "prettier.requireConfig": true,
+  "languageserver": {
+  "ccls": {
+    "command": "ccls",
+    "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
+    "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
+    "initializationOptions": {
+        "cache": {
+          "directory": "/tmp/ccls"
+        }
+      }
+  }
+  }
 }
