Add vim tmux resizer and vim tmux navigator

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
 
 # Set tmux Theme
 set -g @tmux-gruvbox 'dark' # or 'light'
