add vim like navigation in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,5 +22,11 @@ set -g @tmux-gruvbox 'dark' # or 'light'
 # tmux resurrect processes
 set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
 
+# Vim like copy paste
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 
 run '~/.tmux/plugins/tpm/tpm'
