Update depriciated COC settings

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -12,7 +12,8 @@
     "graphql"
   ],
   "explorer.file.showHiddenFiles": true,
-  "explorer.icon.enableVimDevicons": true,
+  "explorer.icon.enableNerdFont": true,
+  "explorer.icon.source": "vim-devicons",
   "explorer.icon.enableNerdfont": true,
   "explorer.width": 30,
   "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
