use onedark theme, add blame plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,12 +12,13 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'egel/tmux-gruvbox'
+# set -g @plugin 'egel/tmux-gruvbox'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Set tmux Theme
-set -g @tmux-gruvbox 'dark' # or 'light'
+#set -g @tmux-gruvbox 'dark' # or 'light'
 
 # tmux resurrect processes
 set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
