--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,6 @@ set -g base-index 1
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
 
 set -g mouse on
 
@@ -29,4 +27,11 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+# split panes using | and -
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
+
 run '~/.tmux/plugins/tpm/tpm'
+
