Add new plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+set-option -g prefix M-a
+unbind-key M-a
+bind-key M-a send-prefix
+
 # start window at index 1
 set -g base-index 1
 
@@ -34,4 +38,4 @@ unbind '"'
 unbind %
 
 run '~/.tmux/plugins/tpm/tpm'
-
+bind-key r source-file ~/.tmux.conf \; display-message "cronfig reloaded"
