--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,6 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-# set -g @plugin 'egel/tmux-gruvbox'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
@@ -39,3 +38,5 @@ unbind %
 
 run '~/.tmux/plugins/tpm/tpm'
 bind-key r source-file ~/.tmux.conf \; display-message "cronfig reloaded"
+
+set-option -ga terminal-overrides ",xterm-256color:Tc"
