Move tmux plugin to tmux plugin dir

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,7 @@ bind-key M-a send-prefix
 
 # start window at index 1
 set -g base-index 1
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
@@ -17,9 +18,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
-
-# Set tmux Theme
-#set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 
 # tmux resurrect processes
 set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
@@ -37,6 +36,4 @@ unbind '"'
 unbind %
 
 run '~/.tmux/plugins/tpm/tpm'
-bind-key r source-file ~/.tmux.conf \; display-message "cronfig reloaded"
-
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded"
