--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,11 @@ set-option -g prefix M-a
 unbind-key M-a
 bind-key M-a send-prefix
 
+tmux_dir="~/.config/tmux"
+tmux_conf_dir="$tmux_dir/conf"
+
+source "$tmux_conf_dir/skin.conf"
+
 # start window at index 1
 set -g base-index 1
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -18,7 +23,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
 
 # tmux resurrect processes
 set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
