--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ tmux_dir="~/.config/tmux"
 tmux_conf_dir="$tmux_dir/conf"
 
 
+
 # start window at index 1
 set -g base-index 1
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -21,7 +22,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # tmux resurrect processes
 set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
@@ -38,5 +38,30 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-run '~/.tmux/plugins/tpm/tpm'
+
+# bar decoration
+bg=default
+fg="#d3d3d3"
+orange="#e78a4e"
+highlight="#89DDFF"
+
+prfx="#[nobold]#[bg=${bg},fg=${fg}] #{?client_prefix,<prefix>,}"
+wg_time="#[nobold]#[bg=${bg},fg=${orange}] %I:%M"
+wg_date="#[bold]#[bg=${bg},fg=${highlight}] %d-%b"
+pomo="#[nobold]#[bg=${bg},fg=${highlight}] #(pomodoro status --format '%%d %%!r ⏱  %%c%%!g 🍅')"
+
+set -g status-style "bg=${bg} fg=${fg}"
+setw -g window-status-current-style fg=${orange},bg=${bg}
+
+set -g window-status-separator ""
+set -g window-status-format "#[nobold]#[bg=${bg},fg=${fg}] #W "
+set -g window-status-current-format "#[nobold]#[bg=${bg},fg=${orange}] #W "
+
+set -g status-left "#[bold]#[bg=${bg},fg=${highlight}] #S "
+set -g status-right "${prfx} ${pomo}${wg_time} ${wg_date} "
+
+source "$tmux_conf_dir/pomodoro.conf"
+
+run "$tmux_dir/plugins/tpm/tpm"
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded"
+
