Customize tmux theme

--- a/tmux/conf/pomodoro.conf
+++ b/tmux/conf/pomodoro.conf
@@ -1,2 +1,9 @@
 set -g status-interval 1
 
+set -g @pomodoro_notifications 'on'
+set -g @pomodoro_sound '/usr/share/sounds/Oxygen-K3B-Finish-Success.ogg'
+set -g @pomodoro_auto_restart false
+
+set -g @pomodoro_start 'p'                  # Start a Pomodoro with tmux-prefix + p
+set -g @pomodoro_cancel 'p'                 # Cancel a Pomodoro with tmux-prefix key + P
+set -g @pomodoro_granularity 'on'
