--- a/tmux/conf/statusbar.conf
+++ b/tmux/conf/statusbar.conf
@@ -1,22 +1,42 @@
-# bar decoration
-bg=default
-fg="#d3d3d3"
-orange="#e78a4e"
-highlight="#89DDFF"
+color_bg="#2e323b"
+color_fg="#282c34"
+color_green="#98c379"
+color_yellow="#e5c07b"
+color_red="#e06c75"
+color_blue="#61afef"
+color_cyan="#56b6c2"
+color_purple="#c678dd"
+color_gray="#5c6370"
+color_buffer="#939aa3"
+color_selection="#3e4452"
 
-prfx="#[nobold]#[bg=${bg},fg=${fg}]"
-wg_time="#[nobold]#[bg=${bg},fg=${orange}] %I:%M"
-wg_date="#[bold]#[bg=${bg},fg=${highlight}] %d-%b"
+set -g @mode_indicator_prefix_prompt "WAIT"
+set -g @mode_indicator_prefix_mode_style fg=$color_blue,bold
+set -g @mode_indicator_copy_prompt "COPY"
+set -g @mode_indicator_copy_mode_style fg=$color_green,bold
+set -g @mode_indicator_sync_prompt "SYNC"
+set -g @mode_indicator_sync_mode_style fg=$color_red,bold
+set -g @mode_indicator_empty_prompt "TMUX"
+set -g @mode_indicator_empty_mode_style fg=$color_purple,bold
 
-set -g status-left-length 20
+#################################### OPTIONS ###################################
 
-set -g status-style "bg=${bg} fg=${fg}"
-setw -g window-status-current-style fg=${orange},bg=${bg}
-
-set -g window-status-separator " |"
-set -g window-status-format "#[nobold]#[bg=${bg},fg=${fg}] #I #W"
-set -g window-status-current-format "#[nobold]#[bg=${bg},fg=${orange}] #I #W"
-
+set -g status on
 set -g status-justify centre
-set -g status-left "#[bold]#[bg=${bg},fg=${highlight}] #S "
-set -g status-right "${prfx} ${pomo}${wg_time} ${wg_date} "
+set -g status-position bottom
+set -g status-left-length 90
+set -g status-right-length 90
+set -g status-style "bg=$color_fg"
+# set -g window-style ""
+# set -g window-active-style ""
+
+set -g message-style bg=$color_blue,fg=$color_bg
+setw -g window-status-separator "   "
+set-window-option -g mode-style bg=$color_purple,fg=$color_bg
+
+#################################### FORMAT ####################################
+
+set -g status-left "#{tmux_mode_indicator} #{pomodoro_status}"
+setw -g window-status-format "#[fg=$color_gray,italics]#I: #[noitalics]#W"
+set -g status-right "#{battery_percentage} #{battery_icon_status} #{battery_remain}| CPU: #{cpu_percentage}"
+setw -g window-status-current-format "#[fg=$color_purple,italics]#I: #[fg=$color_buffer,noitalics,bold]#W"
