--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,3 @@
-set-option -g prefix M-a
-unbind-key M-a
-bind-key M-a send-prefix
-
 tmux_dir="~/.config/tmux"
 tmux_conf_dir="$tmux_dir/conf"
 
@@ -20,26 +16,16 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'RyanMillerC/better-vim-tmux-resizer'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-battery'          # Battery status in tmux
+set -g @plugin 'tmux-plugins/tmux-cpu'              # Display CPU performance
 
 # tmux resurrect processes
 set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
 
-# Vim like copy paste
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
-# split panes using | and -
-bind \\ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
-
 source "$tmux_conf_dir/pomodoro.conf"
 source "$tmux_conf_dir/statusbar.conf"
+source "$tmux_conf_dir/keymaps.conf"
 
 run "$tmux_dir/plugins/tpm/tpm"
 run "$tmux_dir/plugins/tmux-pomodoro-plus/pomodoro.tmux"
-bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "config reloaded"
-
