--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -10,7 +10,8 @@
     "json",
     "javascriptreact",
     "typescript.tsx",
-    "graphql"
+    "graphql",
+    "dart"
   ],
   "prettier.requireConfig": true,
   "languageserver": {
@@ -25,5 +26,6 @@
       }
     }
   },
-  "rust-analyzer.enable": true
+  "rust-analyzer.enable": true,
+  "snippets.ultisnips.pythonPrompt": false
 }
