--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,7 +21,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'          # Battery status in tmux
 set -g @plugin 'tmux-plugins/tmux-cpu'              # Display CPU performance
 
 # tmux resurrect processes
-set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn'
+set -g @resurrect-processes 'ssh psql mysql sqlite3 node npm yarn go'
 
 source "$tmux_conf_dir/pomodoro.conf"
 source "$tmux_conf_dir/statusbar.conf"
