Add alacritty config and fix sym link

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@ tmux_dir="~/.config/tmux"
 tmux_conf_dir="$tmux_dir/conf"
 
 # start window at index 1
+set-option -g default-shell /bin/zsh
 set -g base-index 1
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
