Add install script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,5 +28,5 @@ source "$tmux_conf_dir/pomodoro.conf"
 source "$tmux_conf_dir/statusbar.conf"
 source "$tmux_conf_dir/keymaps.conf"
 
-run "$tmux_dir/plugins/tpm/tpm"
-run "$tmux_dir/plugins/tmux-pomodoro-plus/pomodoro.tmux"
+# run "$tmux_dir/plugins/tmux-pomodoro-plus/pomodoro.tmux"
+run "$tmux_dir/tpm/tpm"
