--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -37,12 +37,9 @@ white = '#c0caf5'
 index = 16
 color = '#ff9e64'
 
-[[colors.indexed_colors]]
-index = 17
-color = '#db4b4b'
 [cursor.style]
 blinking = "Off"
-shape = "Block"
+shape = "Beam"
 
 [font]
 size = 12
@@ -123,5 +120,5 @@ semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 program = "/usr/bin/zsh"
 
 [window]
-opacity = 0.97
+opacity = 1
 startup_mode = "Maximized"
