--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 # TokyoNight Alacritty Colors
 # Default colors
@@ -116,9 +115,14 @@ history = 10000
 save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 
-[shell]
+[terminal.shell]
 program = "/usr/bin/zsh"
 
 [window]
 opacity = 0.99
 startup_mode = "Maximized"
+
+[general]
+live_config_reload = true
+
+[terminal]
